fixed hotel link

--- a/mainsite/templates/lodging.html
+++ b/mainsite/templates/lodging.html
@@ -18,7 +18,7 @@
 
       <h4>You can make your reservations at the Doubletree Hilton in Tinton Falls.  We have a group rate of $129 plus tax which is good only until <span class='strong'>September 3</span>.</h4>
 
-      <h4>You can make reservations by calling the hotel directly at 732-544-9300 and asking for the <span class='strong'>Wiener Wedding</span> block or by going to <a href="www.tintonfallseatontown.doubletree.com">their website</a> and entering group code <span class='strong'>WIE</span>.</h4>
+      <h4>You can make reservations by calling the hotel directly at 732-544-9300 and asking for the <span class='strong'>Wiener Wedding</span> block or by going to <a href="http://www.tintonfallseatontown.doubletree.com">their website</a> and entering group code <span class='strong'>WIE</span>.</h4>
 
       <h4>Shuttle service will be provided from the train station to the hotel on the day of the wedding (probably) and between the wedding venue and the hotel before and after the event.</h4>
         <div class="cleaner"></div>
