added second hotel info

--- a/mainsite/templates/lodging.html
+++ b/mainsite/templates/lodging.html
@@ -20,6 +20,8 @@
 
       <h4>You can make reservations by calling the hotel directly at 732-544-9300 and asking for the <span class='strong'>Wiener Wedding</span> block or by going to <a href="http://www.tintonfallseatontown.doubletree.com">their website</a> and entering group code <span class='strong'>WIE</span>.</h4>
 
+      <h4>We also made reservations at the <a href="http://www.comfortinn.com/hotel-tinton_falls-new_jersey-NJ248">Comfort Inn</a> next door (they share a parking lot) so you can also call 732-389-4800 if you like them better or want to save four dollars.</h4>
+      
       <h4>Shuttle service will be provided from the train station to the hotel on the day of the wedding (probably) and between the wedding venue and the hotel before and after the event.</h4>
         <div class="cleaner"></div>
       </div>
