updated after party

--- a/mainsite/templates/afterparty.html
+++ b/mainsite/templates/afterparty.html
@@ -16,7 +16,7 @@
     <div id="templatemo_content">
 
 <div id='after_party'>
-  <h4>Please join us for the after-party beginning at 9PM until upside-down question-mark at the Colts Neck Inn (your rooms are upstairs.  Look how convenient!).</h4>
+  <h4>Please join us for the after-party beginning at 9PM until upside-down question-mark at the Doubletree Hilton in Tinton Falls. (your rooms are upstairs.  Look how convenient!).</h4>
         <div class="cleaner"></div>
       </div>
       <div id="templatemo_content_bottom"></div>
