--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -131,7 +131,10 @@ function clearText(field)
         </div>
         <br><br>
 
-        <div id='welcome'>Have fun looking around what is arguably the best wedding website ever created.  Take the <a href="/quiz/" >quiz</a> to see how well you know Jason and Paul.  Look through the <a href="/photos/">photo album</a> and marvel at those handsome devils.  Be sure to leave a message on the <a href="/guestbook/">guestbook</a> proclaiming your love and devotion for the boys! And brand new addition!  Check out our <a href="/faq/">FAQ</a> rather than annoying us!</div>
+        <div class='welcome'><span class="strong">Getting to the hotel:</span>  From NYC, take <a href="http://www.njtransit.com/sf/sf_servlet.srv?hdnPageAction=TripPlannerItineraryFrom">NJ Transit</a> to the Long Branch station.  If you take either of the trains leaving Penn Station at 10:07 or 11:07 (arriving in Long Branch at 11:43 and 12:43 respectively) then there will be shuttles that take you to the hotel from the train station.</div>
+        <div class='welcome'><span class="strong">Getting to the wedding:</span>  We will have shuttles leaving the Doubletree Hotel at 2:00pm to take guests to South Wall Banquet Hall.  Don't be late.</div>
+        <div class='welcome'>If you miss your train and come later, you can call the Long Branch Paramount Cab service at 732-222-5300.</div>
+        <div class='welcome'>Have fun looking around what is arguably the best wedding website ever created.  Take the <a href="/quiz/" >quiz</a> to see how well you know Jason and Paul.  Look through the <a href="/photos/">photo album</a> and marvel at those handsome devils.  Be sure to leave a message on the <a href="/guestbook/">guestbook</a> proclaiming your love and devotion for the boys! And brand new addition!  Check out our <a href="/faq/">FAQ</a> rather than annoying us!</div>
  
     	<div class="cleaner"></div>
     </div>
